--- a/aboutUs.html
+++ b/aboutUs.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1> Amrutvahini College Of Engineering</h1>
-    <a href="index.html"></a>
-    <a href="contacatUs.html"></a>
-    <a href="aboutUs.html"></a>
+    <a href="index.html">Home</a>
+    <a href="contacatUs.html">contact Us</a>
+    <a href="aboutUs.html">about Us</a>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam eligendi, debitis voluptas dolor ducimus repellendus nobis error odit praesentium nulla explicabo nostrum dicta excepturi, obcaecati amet! Fuga repudiandae facere minus.</p>
 </body>
