--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <h1> Amrutvahini College Of Engineering</h1>
-    <a href="index.html"></a>
-    <a href="contacatUs.html"></a>
-    <a href="aboutUs.html"></a>
+    <a href="index.html">Home</a>
+    <a href="contacatUs.html">Contact Us</a>
+    <a href="aboutUs.html">About Us
+        
+    </a>
     <hr>
     <marquee behavior="" direction="">THIS IS THE AMRUTVAHINI COLLEGE OF ENGINEERING</marquee>
     <img src="image.png" width="100%">
