--- a/contacatUs.html
+++ b/contacatUs.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1> Amrutvahini College Of Engineering</h1>
-    <a href="index.html"></a>
-    <a href="contacatUs.html"></a>
-    <a href="aboutUs.html"></a>
+    <a href="index.html">Home</a>
+    <a href="contacatUs.html">Contact Us</a>
+    <a href="aboutUs.html">About Us</a>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum quod recusandae laborum molestias, consequatur aspernatur dicta nobis commodi ratione, iure maxime at architecto natus, saepe ut nemo. Aspernatur, placeat veritatis.</p>
 </body>
