updated all files

--- a/Task/index.html
+++ b/Task/index.html
@@ -6,6 +6,18 @@
     <title>Shravani</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quis quasi deserunt quaerat? Reprehenderit facilis corporis eius sed odio magnam eveniet, praesentium consectetur ratione blanditiis enim, incidunt numquam vitae doloribus?</p>
+    <img src="images/logo.png" alt="" width="5%"height="5%">
+    <h1>🎵 Welcome to My Songs Website 🎵</h1>
+    
+    <marquee behavior="scroll" direction="left" scrollamount="10">
+        <a href="song1.html"><img src="images/s1.png" width="150" height="150"></a> &nbsp;&nbsp;
+        <a href="song2.html"><img src="images/s2.png" width="150" height="150"></a> &nbsp;&nbsp;
+        <a href="song3.html"><img src="images/s3.png" width="150" height="150"></a> &nbsp;&nbsp;
+        <a href="song4.html"><img src="images/s4.png" width="150" height="150"></a> &nbsp;&nbsp;
+        <a href="song5.html"><img src="images/s5.png" width="150" height="150"></a>
+    </marquee>
+    
+
+    <p>Click any song from the moving list to open it!</p>
 </body>
 </html>
