--- a/Task/song5.html
+++ b/Task/song5.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<!-- Navigation Bar -->
+
 <p>
     <a href="index.html">Home</a> |
     <a href="song1.html">Darkhast</a> |
@@ -19,7 +19,6 @@
 
 <h1>🎵 Deewani Mastani 🎵</h1>
 
-<!-- Song Image -->
 <img src="images/s5.png" width="200" height="200" alt="Deewani Mastani Song Image">
 
 <h2>Song Details</h2>
@@ -35,13 +34,13 @@
     classical and modern music, showcasing elegance, love, and devotion.
 </p>
 
-<h3>Lyrics (optional):</h3>
+<h3>Lyrics:</h3>
 <pre>
 Deewani, mastani, hogayi haan hogayi...
 Deewani mastani hogayi...
 (Write your favourite lines here)
 </pre>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/h6lHUn20J5g?si=O1OFvdG1OydHEhBB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <br>
 <a href="index.html">⬅ Back to Home</a>
 
