--- a/Task/index.html
+++ b/Task/index.html
@@ -7,17 +7,28 @@
 </head>
 <body>
     <img src="images/logo.png" alt="" width="5%"height="5%">
-    <h1>🎵 Welcome to My Songs Website 🎵</h1>
+    <h1 align="center">🎵 Welcome to My Songs Website 🎵</h1>
     
     <marquee behavior="scroll" direction="left" scrollamount="10">
-        <a href="song1.html"><img src="images/s1.png" width="150" height="150"></a> &nbsp;&nbsp;
-        <a href="song2.html"><img src="images/s2.png" width="150" height="150"></a> &nbsp;&nbsp;
-        <a href="song3.html"><img src="images/s3.png" width="150" height="150"></a> &nbsp;&nbsp;
-        <a href="song4.html"><img src="images/s4.png" width="150" height="150"></a> &nbsp;&nbsp;
-        <a href="song5.html"><img src="images/s5.png" width="150" height="150"></a>
+        <a href="song1.html"><img src="images/s1.png" width="250" height="250"></a> 
+        <a href="song2.html"><img src="images/s2.png" width="250" height="250"></a> 
+        <a href="song3.html"><img src="images/s3.png" width="250" height="250"></a> 
+        <a href="song4.html"><img src="images/s4.png" width="250" height="250"></a> 
+        <a href="song5.html"><img src="images/s5.png" width="250" height="250"></a>
     </marquee>
     
 
     <p>Click any song from the moving list to open it!</p>
+    <br><br>
+<h2 align="center">More Trending Songs</h2>
+
+<marquee behavior="scroll" direction="right" scrollamount="7">
+    <a href="trend1.html"><img src="images/t1.png" width="300" height="450"></a>
+    &nbsp;&nbsp;&nbsp;
+    <a href="trend2.html"><img src="images/t2.png" width="300" height="450"></a>
+    &nbsp;&nbsp;&nbsp;
+    <a href="trend3.html"><img src="images/t3.png" width="300" height="450"></a>
+</marquee>
+
 </body>
 </html>
